--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "directories": {
       "lib": "dist/amd"
     },
-    "dependencies": {},
+    "dependencies": {
+      "core-js": "npm:core-js@^0.9.18"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
       "babel-runtime": "npm:babel-runtime@^5.1.13",
