--- a/package.json
+++ b/package.json
@@ -37,18 +37,19 @@
   "devDependencies": {
     "aurelia-tools": "^0.1.7",
     "babel-dts-generator": "^0.2.5",
+    "babel-eslint": "^3.1.19",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-babel": "^5.1.0",
     "gulp-bump": "^0.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^0.14.0",
     "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
-    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.7",
