--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "jspm": {
     "main": "index",
-    "format": "register",
+    "format": "amd",
     "directories": {
-      "lib": "dist/system"
+      "lib": "dist/amd"
     },
     "dependencies": {},
     "devDependencies": {
