--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "core-js": "npm:core-js@^0.9.18"
+      "core-js": "npm:core-js@^0.9.5"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
@@ -56,7 +56,7 @@
     "karma-coverage": "^0.3.1",
     "karma-jasmine": "^0.3.5",
     "karma-jasmine-ajax": "git://github.com/martingust/karma-jasmine-ajax.git",
-    "karma-jspm": "^1.1.5",
+    "karma-jspm": "^2.0.1-beta.2",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
