add tests to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ cache:
     - node_modules
 
 before_script:
-  - npm install -g gulp
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm install -g gulp jspm
+  - jspm install
 
 script:
   - gulp
