Update karma config

--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.3.1",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.5",
-    "karma-jasmine-ajax": "git://github.com/martingust/karma-jasmine-ajax.git",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-jspm": "^2.0.1",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
