--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - node_modules/jspm/jspm.js
+  - node_modules/jspm/jspm.js install
 
 script:
   - node_modules/gulp/bin/gulp.js
