--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-fetch-client",
-  "version": "0.4.0",
+  "version": "1.0.0-beta.1",
   "description": "A simple client based on the Fetch standard.",
   "keywords": [
     "aurelia",
