--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-fetch-client",
-  "version": "0.4.0",
+  "version": "1.0.0-beta.1",
   "description": "A simple client based on the Fetch standard.",
   "keywords": [
     "aurelia",
@@ -19,6 +19,7 @@
     "type": "git",
     "url": "http://github.com/aurelia/fetch-client"
   },
+  "jspmNodeConversion": false,
   "jspm": {
     "main": "aurelia-fetch-client",
     "format": "amd",
@@ -34,9 +35,12 @@
       "core-js": "npm:core-js@^1.2.6"
     }
   },
+  "dependencies": {
+    "core-js": "^1.2.6"
+  },
   "devDependencies": {
     "aurelia-tools": "^0.1.12",
-    "babel-dts-generator": "^0.2.16",
+    "babel-dts-generator": "^0.2.17",
     "babel-eslint": "^4.1.1",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
