--- a/package.json
+++ b/package.json
@@ -54,12 +54,13 @@
     "gulp-typedoc": "^1.2.1",
     "gulp-typedoc-extractor": "^0.0.8",
     "jasmine-core": "^2.1.3",
+    "jspm": "^0.16.15",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.3.1",
-    "karma-jasmine": "^0.3.5",
-    "karma-jasmine-ajax": "git://github.com/martingust/karma-jasmine-ajax.git",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.1",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
@@ -67,6 +68,7 @@
     "through2": "^2.0.0",
     "vinyl": "^0.5.1",
     "vinyl-paths": "^1.0.0",
+    "whatwg-fetch": "^0.10.1",
     "yargs": "^2.1.1"
   },
   "aurelia": {
