--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "type": "git",
     "url": "http://github.com/aurelia/fetch-client"
   },
+  "scripts": {
+    "postinstall": "jspm install",
+    "test": "gulp test",
+    "ci": "gulp ci"
+  },
   "jspmNodeConversion": false,
   "jspm": {
     "main": "aurelia-fetch-client",
@@ -48,20 +53,24 @@
     "gulp-babel": "^5.2.1",
     "gulp-bump": "^0.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-coveralls": "0.1.4",
     "gulp-eslint": "^1.0.0",
     "gulp-insert": "^0.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-typedoc": "^1.2.1",
     "gulp-typedoc-extractor": "^0.0.8",
+    "isparta": "4.0.0",
+    "istanbul": "github:gotwarlost/istanbul#source-map",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.15",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.3.1",
+    "karma-coverage": "github:douglasduteil/karma-coverage#next",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.1",
+    "karma-sourcemap-loader": "0.3.6",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
