chore(ci): update ci configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,15 @@ language: node_js
 node_js:
   - "stable"
 
+sudo: false
+
 cache:
   directories:
     - node_modules
     - jspm_packages
+
+before_install:
+  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
 
 install:
   - npm install
