--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "core-js": "^1.2.6"
   },
   "devDependencies": {
-    "aurelia-tools": "^0.1.12",
+    "aurelia-tools": "0.1.16",
     "babel-dts-generator": "^0.2.17",
     "babel-eslint": "^4.1.1",
     "conventional-changelog": "0.0.11",
@@ -62,8 +62,8 @@
     "isparta": "4.0.0",
     "istanbul": "github:gotwarlost/istanbul#source-map",
     "jasmine-core": "^2.1.3",
-    "jspm": "^0.16.15",
-    "karma": "^0.12.28",
+    "jspm": "0.16.15",
+    "karma": "0.13.15",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "github:douglasduteil/karma-coverage#next",
