--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,22 @@ node_js:
 
 sudo: false
 
+notifications:
+  email: false
+
 cache:
   directories:
     - node_modules
     - jspm_packages
 
-before_install:
-  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
+branches:
+  only: 
+    - master
 
 install:
   - npm install
+  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
+  - node_modules/.bin/jspm install
 
 before_script:
   - export CHROME_BIN=chromium-browser
