--- a/package.json
+++ b/package.json
@@ -23,24 +23,25 @@
     "test": "gulp test",
     "ci": "gulp ci"
   },
-  "jspmNodeConversion": false,
   "jspm": {
+    "registry": "npm",
+    "jspmPackage": true,
     "main": "aurelia-fetch-client",
     "format": "amd",
     "directories": {
-      "lib": "dist/amd"
+      "dist": "dist/amd"
     },
     "dependencies": {
-      "core-js": "npm:core-js@^1.2.6"
+      "core-js": "^2.0.3"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^1.2.6"
+      "babel": "^5.1.13",
+      "babel-runtime": "^5.1.13",
+      "core-js": "^2.0.3"
     }
   },
   "dependencies": {
-    "core-js": "^1.2.6"
+    "core-js": "^2.0.3"
   },
   "devDependencies": {
     "aurelia-tools": "0.1.16",
