doc(http-services): fix file naming and package.json

--- a/package.json
+++ b/package.json
@@ -87,7 +87,12 @@
   },
   "aurelia": {
     "documentation": {
-      "articles": []
+      "articles": [
+        {
+          "title": "HTTP Services",
+          "href": "doc/article/en-US/http-services.md"
+        }
+      ]
     }
   }
 }
