chore(bower): add missing info

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "fetch"
   ],
   "homepage": "http://aurelia.io",
+  "main": "dist/commonjs/aurelia-fetch-client.js",
+  "moduleType": "node",
   "license": "MIT",
   "authors": [
     "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)"
