fix(util): use aurelia-pal and test if Blob is available

--- a/package.json
+++ b/package.json
@@ -31,12 +31,21 @@
     "directories": {
       "dist": "dist/amd"
     },
+    "dependencies": {
+      "aurelia-pal": "^1.0.0-beta.1.2.2"
+    },
+    "peerDependencies": {
+      "aurelia-pal": "^1.0.0-beta.1.2.2"
+    },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0-beta.1.1.1",
       "babel": "^5.1.13",
       "babel-runtime": "^5.1.13",
       "core-js": "^2.0.3"
     }
+  },
+  "dependencies": {
+    "aurelia-pal": "^1.0.0-beta.1.2.2"
   },
   "devDependencies": {
     "aurelia-tools": "0.1.16",
