--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     }
   },
   "devDependencies": {
-    "aurelia-tools": "0.1.16",
+    "aurelia-tools": "^0.2.1",
     "babel-dts-generator": "^0.4.5",
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
@@ -52,14 +52,15 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-1": "^6.5.0",
-    "conventional-changelog": "0.0.11",
+    "conventional-changelog": "^1.1.0",
     "del": "^1.1.0",
+    "eslint": "^2.11.1",
     "gulp": "^3.8.10",
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-coveralls": "0.1.4",
-    "gulp-eslint": "^1.0.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-insert": "^0.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-typedoc": "^1.2.1",
