--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
   "main": "dist/commonjs/aurelia-fetch-client.js",
+  "typings": "dist/aurelia-fetch-client.d.ts",
   "repository": {
     "type": "git",
     "url": "http://github.com/aurelia/fetch-client"
@@ -40,51 +41,51 @@
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.1",
-    "babel-dts-generator": "^0.4.5",
+    "babel-dts-generator": "^0.5.1",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-plugin-transform-function-bind": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2015-loose-native-modules": "^1.0.0",
     "babel-preset-stage-1": "^6.5.0",
     "conventional-changelog": "^1.1.0",
-    "del": "^1.1.0",
-    "eslint": "^2.11.1",
-    "gulp": "^3.8.10",
+    "del": "^2.2.0",
+    "eslint": "^2.12.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
+    "gulp-bump": "^2.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-coveralls": "0.1.4",
     "gulp-eslint": "^2.0.0",
-    "gulp-insert": "^0.4.0",
+    "gulp-ignore": "^2.0.1",
+    "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
-    "gulp-typedoc": "^1.2.1",
+    "gulp-typedoc": "^2.0.0",
     "gulp-typedoc-extractor": "^0.0.8",
-    "isparta": "4.0.0",
-    "istanbul": "github:gotwarlost/istanbul#source-map",
-    "jasmine-core": "^2.1.3",
-    "jspm": "0.16.15",
-    "karma": "0.13.19",
+    "gulp-typescript": "^2.13.6",
+    "gulp-util": "^3.0.7",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "github:douglasduteil/karma-coverage#next",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.6",
-    "karma-jspm": "^2.0.1",
-    "karma-sourcemap-loader": "0.3.6",
-    "object.assign": "^1.0.3",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.2",
-    "through2": "^2.0.0",
-    "vinyl": "^0.5.1",
-    "vinyl-paths": "^1.0.0",
-    "whatwg-fetch": "^0.10.1",
-    "yargs": "^2.1.1"
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-jspm": "^2.1.1",
+    "merge2": "^1.0.2",
+    "object.assign": "^4.0.3",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.2.1",
+    "through2": "^2.0.1",
+    "typedoc": "^0.4.2",
+    "typescript": "^1.9.0-dev.20160611-1.0",
+    "vinyl": "^1.1.1",
+    "vinyl-paths": "^2.1.0",
+    "yargs": "^4.7.1"
   },
   "aurelia": {
     "documentation": {
