--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-fetch-client",
-  "version": "1.0.0-beta.2.0.1",
+  "version": "1.0.0-rc.1.0.0",
   "description": "A simple client based on the Fetch standard.",
   "keywords": [
     "aurelia",
