chore(project): remove unneeded babel runtime

--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
       "dist": "dist/amd"
     },
     "devDependencies": {
-      "aurelia-polyfills": "^1.0.0-beta.2.0.0",
-      "babel": "^5.1.13",
-      "babel-runtime": "^5.1.13",
-      "core-js": "^2.0.3"
+      "aurelia-polyfills": "^1.0.0-beta.2.0.0"
     }
   },
   "devDependencies": {
