--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
   },
   "jspm": {
     "registry": "npm",
-    "jspmPackage": true,
     "main": "aurelia-fetch-client",
     "format": "amd",
     "directories": {
       "dist": "dist/amd"
     },
+    "dependencies": {
+      "aurelia-pal": "^1.3.0"
+    },
     "devDependencies": {
+      "aurelia-pal-browser": "^1.0.0",
       "aurelia-polyfills": "^1.0.0-beta.2.0.0"
     }
+  },
+  "dependencies": {
+    "aurelia-pal": "^1.3.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.4",
