--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "http://github.com/aurelia/fetch-client"
   },
   "scripts": {
-    "test": "gulp test",
+    "test": "karma start",
+    "test:debugger": "karma start --browsers ChromeDebugging",
     "ci": "gulp ci"
   },
   "jspm": {
@@ -32,18 +33,20 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "aurelia-pal": "^1.3.0"
+      "aurelia-pal": "^1.8.0"
     },
     "devDependencies": {
-      "aurelia-pal-browser": "^1.0.0",
-      "aurelia-polyfills": "^1.0.0-beta.2.0.0"
+      "aurelia-pal-browser": "^1.8.0",
+      "aurelia-polyfills": "^1.3.0"
     }
   },
   "dependencies": {
     "aurelia-pal": "^1.3.0"
   },
   "devDependencies": {
-    "aurelia-tools": "^0.2.4",
+    "@types/jasmine": "^3.3.5",
+    "aurelia-pal-browser": "^1.8.0",
+    "aurelia-polyfills": "^1.3.0",
     "babel-dts-generator": "^0.6.1",
     "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-flow": "^6.8.0",
@@ -72,32 +75,28 @@
     "gulp-typedoc-extractor": "^0.0.8",
     "gulp-typescript": "^2.13.6",
     "gulp-util": "^3.0.7",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.2",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.4",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-jasmine": "^2.0.1",
     "karma-jspm": "^2.2.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.5",
     "merge2": "^1.0.2",
     "object.assign": "^4.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.2",
     "through2": "^2.0.1",
+    "ts-loader": "^5.3.3",
     "typedoc": "^0.11.1",
-    "typescript": "^2.7.0",
+    "typescript": "^3.2.2",
     "vinyl": "^1.1.1",
     "vinyl-paths": "^2.1.0",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
     "yargs": "^4.8.1"
-  },
-  "aurelia": {
-    "documentation": {
-      "articles": [
-        {
-          "title": "HTTP Services",
-          "href": "doc/article/en-US/http-services.md"
-        }
-      ]
-    }
   }
 }
