--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "emitDecoratorMetadata": false,
     "moduleResolution": "node",
     "stripInternal": true,
+    "declaration": false,
+    "removeComments": true,
     "lib": ["es2015", "dom"]
   },
   "exclude": [
