--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     "type": "git",
     "url": "http://github.com/aurelia/fetch-client"
   },
+  "files": [
+    "dist",
+    "doc",
+    "package.json",
+    "README.md",
+    "LICENSE",
+    "typings.json"
+  ],
   "scripts": {
     "prebuild": "npm run rimraf",
     "build": "rollup -c",
     "changelog": "node build/changelog.js",
-    "postbuild": "dts-bundle-generator -o dist/aurelia-ui-virtualization.d.ts src/aurelia-ui-virtualization.ts",
+    "postbuild": "dts-bundle-generator -o dist/aurelia-fetch-client.d.ts src/aurelia-fetch-client.ts",
     "test": "karma start",
     "test:debugger": "karma start --browsers ChromeDebugging",
     "rimraf": "rimraf dist",
@@ -56,6 +64,7 @@
     "aurelia-pal-browser": "^1.8.0",
     "aurelia-polyfills": "^1.3.0",
     "babel-plugin-syntax-flow": "^6.8.0",
+    "dts-bundle-generator": "^2.0.0",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
