--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-fetch-client",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "A simple client based on the Fetch standard.",
   "keywords": [
     "aurelia",
@@ -34,7 +34,7 @@
   "scripts": {
     "prebuild": "npm run rimraf",
     "build": "rollup -c",
-    "changelog": "node build/changelog.js",
+    "changelog": "cross-env conventional-changelog -p angular -i doc/CHANGELOG.md -s",
     "postbuild": "dts-bundle-generator -o dist/aurelia-fetch-client.d.ts src/aurelia-fetch-client.ts",
     "test": "karma start",
     "test:debugger": "karma start --browsers ChromeDebugging",
@@ -64,6 +64,8 @@
     "aurelia-pal-browser": "^1.8.0",
     "aurelia-polyfills": "^1.3.0",
     "babel-plugin-syntax-flow": "^6.8.0",
+    "conventional-changelog-cli": "^2.0.11",
+    "cross-env": "^5.2.0",
     "dts-bundle-generator": "^2.0.0",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.4",
