--- a/package.json
+++ b/package.json
@@ -32,15 +32,12 @@
     "typings.json"
   ],
   "scripts": {
-    "prebuild": "npm run rimraf",
+    "prebuild": "rimraf dist",
     "build": "rollup -c",
-    "changelog": "cross-env conventional-changelog -p angular -i doc/CHANGELOG.md -s",
     "postbuild": "dts-bundle-generator -o dist/aurelia-fetch-client.d.ts src/aurelia-fetch-client.ts",
     "test": "karma start --single-run",
     "test:watch": "karma start",
     "test:debugger": "karma start --browsers ChromeDebugging",
-    "rimraf": "rimraf dist",
-    "ci": "gulp ci",
     "cut-release": "npm run test && npm run build",
     "postcut-release": "standard-version"
   },
@@ -67,7 +64,6 @@
     "aurelia-pal-browser": "^1.8.0",
     "aurelia-polyfills": "^1.3.0",
     "babel-plugin-syntax-flow": "^6.8.0",
-    "conventional-changelog-cli": "^2.0.11",
     "cross-env": "^5.2.0",
     "dts-bundle-generator": "^2.0.0",
     "jasmine-core": "^3.3.0",
@@ -85,7 +81,6 @@
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "yargs": "^4.8.1"
+    "webpack-cli": "^3.2.1"
   }
 }
